UI tweaks: fixed feed spacing, fixed 0-width on tag list box

--- a/libsrc/scss/base.scss
+++ b/libsrc/scss/base.scss
@@ -127,6 +127,7 @@ button {
 }
 .ncolumn {
     width: 100%;
+    line-height: 0px;
     .column {
         // margin-right: -3px;
         // display: inline-block;
